--- a/provision.yml
+++ b/provision.yml
@@ -23,7 +23,7 @@
         vpc_subnet_id: "{{ aws_subnet_name }}"
         group_id: "{{ aws_security_group_name }}"
         private_ip: '{{ aws_private_ip }}'
-        termination_protection: yes
+        #termination_protection: yes
       register: ec2
 
     - name: Add new instance to host group
@@ -41,7 +41,7 @@
       with_items: "{{ ec2.instances }}"
 
     - name: associate elastic ip
-      ec2_eip: instance_id="{{ ec2.instances[0].id }}" ip="{{ aws_eip }}" region="{{ aws_region }}" profile="{{ aws_profile }}"
+      ec2_eip: device_id="{{ ec2.instances[0].id }}" ip="{{ aws_eip }}" region="{{ aws_region }}" profile="{{ aws_profile }}"
 
 - name: bootstrap python
   hosts: launched
